objects/bofc__BOFCOtherthings__c.object
<CustomObject>
    <fields>
        <fullName>bofc__BOFCOBDetails__c</fullName>
        <label>BOFCOBDetails</label>
        <referenceTo>bofc__BOFCOBDetails__c</referenceTo>
        <relationshipLabel>BOFCOtherthings</relationshipLabel>
        <relationshipName>BOFCOtherthings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>bofc__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>bofc__ItemName__c</fullName>
        <label>ItemName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__TestField__c</fullName>
        <label>TestField</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>bofc__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VR</fullName>
                </value>
                <value>
                    <fullName>RT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>bofc__active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bofc__errorConditionFormula__c</fullName>
        <label>errorConditionFormula</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>bofc__errorDisplayField__c</fullName>
        <label>errorDisplayField</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__errorMessage__c</fullName>
        <label>errorMessage</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>BOFCOtherthings</label>
    <nameField>
        <displayFormat>BOT-{0000}</displayFormat>
        <label>BOFCOtherthings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BOFCOtherthings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>